use divs for layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </header>
 <body>
 <img src="background.jpg">
-<ul id="samples1">
+
+<div id="left">
+<ul>
 <li><a href="Page007.pdf">How Athens Came to Be</a></li>
 <li><a href="Page011.pdf">Three Oconee Street Historic Houses</a></li>
 <li><a href="Page035.pdf">The Live Yankees in Athens</a></li>
@@ -23,8 +25,10 @@
 <li><a href="Page311.pdf">Davison-Nicholson Company</a></li>
 <li><a href="Page320.pdf">Monroe Morton</a></li>
 </ul>
+</div>
 
-<ul id="samples2">
+<div id="right">
+<ul>
 <li><a href="Page356.pdf">John E. Talmadge House</a></li>
 <li><a href="Page398.pdf">Moving the Finley Street House</a></li>
 <li><a href="Page420.pdf">A Time of Extremes</a></li>
@@ -40,6 +44,7 @@
 <br>
 <li style="list-style-type: none;"><a href="../TangiblePastOrderForm.pdf">Order Form</a></li>
 </ul>
+</div>
 
 </body>
 </html>
