reorg directory a bit

--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <html>
 <header>
   <title>Sample Pages from "The Tangible Past in Athens, Georgia"</title>
-  <link rel="stylesheet" href="normalize.css" type="text/css" />
-  <link rel="stylesheet" href="tpa.css" type="text/css" />
+  <link rel="stylesheet" href="./css/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="./css/tpa.css" type="text/css" />
 </header>
 <body>
 <img src="background.jpg">
 
 <div id="left">
 <ul>
-<li><a href="Page007.pdf">How Athens Came to Be</a></li>
-<li><a href="Page011.pdf">Three Oconee Street Historic Houses</a></li>
-<li><a href="Page035.pdf">The Live Yankees in Athens</a></li>
-<li><a href="Page063.pdf">The Bookends of Downtown</a></li>
-<li><a href="Page092.pdf">The Victorian House</a></li>
-<li><a href="Page118.pdf">The Young Harris House</a></li>
-<li><a href="Page146.pdf">Henry Hull Carlton</a></li>
-<li><a href="Page160.pdf">Ms. Leonard's Letter</a></li>
-<li><a href="Page181.pdf">Members of the Barrow Family</a></li>
-<li><a href="Page222.pdf">The Five Points Suburbs</a></li>
-<li><a href="Page244.pdf">Family of Cornelia & Manasseh McGinty</a></li>
-<li><a href="Page270.pdf">Prince Avenue Map</a></li>
-<li><a href="Page306.pdf">Greek Revival Architecture</a></li>
-<li><a href="Page311.pdf">Davison-Nicholson Company</a></li>
-<li><a href="Page320.pdf">Monroe Morton</a></li>
+<li><a href="samples/Page007.pdf">How Athens Came to Be</a></li>
+<li><a href="samples/Page011.pdf">Three Oconee Street Historic Houses</a></li>
+<li><a href="samples/Page035.pdf">The Live Yankees in Athens</a></li>
+<li><a href="samples/Page063.pdf">The Bookends of Downtown</a></li>
+<li><a href="samples/Page092.pdf">The Victorian House</a></li>
+<li><a href="samples/Page118.pdf">The Young Harris House</a></li>
+<li><a href="samples/Page146.pdf">Henry Hull Carlton</a></li>
+<li><a href="samples/Page160.pdf">Ms. Leonard's Letter</a></li>
+<li><a href="samples/Page181.pdf">Members of the Barrow Family</a></li>
+<li><a href="samples/Page222.pdf">The Five Points Suburbs</a></li>
+<li><a href="samples/Page244.pdf">Family of Cornelia & Manasseh McGinty</a></li>
+<li><a href="samples/Page270.pdf">Prince Avenue Map</a></li>
+<li><a href="samples/Page306.pdf">Greek Revival Architecture</a></li>
+<li><a href="samples/Page311.pdf">Davison-Nicholson Company</a></li>
+<li><a href="samples/Page320.pdf">Monroe Morton</a></li>
 </ul>
 </div>
 
 <div id="right">
 <ul>
-<li><a href="Page356.pdf">John E. Talmadge House</a></li>
-<li><a href="Page398.pdf">Moving the Finley Street House</a></li>
-<li><a href="Page420.pdf">A Time of Extremes</a></li>
-<li><a href="Page429.pdf">Thomass R. R. Cobb House</a></li>
-<li><a href="Page453.pdf">Twenty-five Cobb Family Houses in Athens</a></li>
-<li><a href="Page467.pdf">Olivia Newton Cobb House</a></li>
-<li><a href="Page496.pdf">Howell Cobb House</a></li>
-<li><a href="Page502.pdf">Elijah Clarke Monument</a></li>
-<li><a href="Page508.pdf">Grove Seminary/St. Joseph's Catholic Church</a></li>
-<li><a href="Page544.pdf">Steam Tannery</a></li>
+<li><a href="samples/Page356.pdf">John E. Talmadge House</a></li>
+<li><a href="samples/Page398.pdf">Moving the Finley Street House</a></li>
+<li><a href="samples/Page420.pdf">A Time of Extremes</a></li>
+<li><a href="samples/Page429.pdf">Thomass R. R. Cobb House</a></li>
+<li><a href="samples/Page453.pdf">Twenty-five Cobb Family Houses in Athens</a></li>
+<li><a href="samples/Page467.pdf">Olivia Newton Cobb House</a></li>
+<li><a href="samples/Page496.pdf">Howell Cobb House</a></li>
+<li><a href="samples/Page502.pdf">Elijah Clarke Monument</a></li>
+<li><a href="samples/Page508.pdf">Grove Seminary/St. Joseph's Catholic Church</a></li>
+<li><a href="samples/Page544.pdf">Steam Tannery</a></li>
 <br>
 <br>
 <br>
-<li style="list-style-type: none;"><a href="../TangiblePastOrderForm.pdf">Order Form</a></li>
+<li style="list-style-type: none;"><a href="TangiblePastOrderForm.pdf">Order Form</a></li>
 </ul>
 </div>
 
