fix title of index.html

--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <html>
 <header>
-  <title>Sample Pages from "The Tangible Past in Athens, Georgia"</title>
+  <title>The Tangible Past in Athens, Georgia</title>
   <link rel="stylesheet" href="./css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="./css/tpa.css" type="text/css" />
 </header>
