add facebook link and font-awesome icons

--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,7 @@
 <html>
 <header>
   <title>The Tangible Past in Athens, Georgia</title>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="./css/tpa.css" type="text/css" />
 </header>
@@ -41,8 +42,9 @@
 <li><a href="Page544.pdf">Steam Tannery</a></li>
 <br>
 <br>
+<li style="list-style-type: none;"><a href="https://www.facebook.com/TangiblePastAthens"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></li>
 <br>
-<li style="list-style-type: none;"><a href="TangiblePastOrderForm.pdf">Order Form</a></li>
+<li style="list-style-type: none;"><a href="TangiblePastOrderForm.pdf"><i class="fa fa-book"></i> Order Your Copy</a></li>
 </ul>
 </div>
 
