--- a/content/index.html
+++ b/content/index.html
@@ -10,36 +10,37 @@
 
 <div id="left">
 <ul>
-<li><a href="Page007.pdf">How Athens Came to Be</a></li>
-<li><a href="Page011.pdf">Three Oconee Street Historic Houses</a></li>
-<li><a href="Page035.pdf">The Live Yankees in Athens</a></li>
-<li><a href="Page063.pdf">The Bookends of Downtown</a></li>
-<li><a href="Page092.pdf">The Victorian House</a></li>
-<li><a href="Page118.pdf">The Young Harris House</a></li>
-<li><a href="Page146.pdf">Henry Hull Carlton</a></li>
-<li><a href="Page160.pdf">Ms. Leonard's Letter</a></li>
-<li><a href="Page181.pdf">Members of the Barrow Family</a></li>
-<li><a href="Page222.pdf">The Five Points Suburbs</a></li>
-<li><a href="Page244.pdf">Family of Cornelia & Manasseh McGinty</a></li>
-<li><a href="Page270.pdf">Prince Avenue Map</a></li>
-<li><a href="Page306.pdf">Greek Revival Architecture</a></li>
-<li><a href="Page311.pdf">Davison-Nicholson Company</a></li>
-<li><a href="Page320.pdf">Monroe Morton</a></li>
+<li><a href="Page007.pdf">Athens Came to Be - 1</a></li>
+<li><a href="Page011.pdf">Oconee Street - 1</a></li>
+<li><a href="Page019.pdf">Live Yankees - 1</a></li>
+<li><a href="Page035.pdf">Live Yankees - 2</a></li>
+<li><a href="Page063.pdf">Bookends - 1</a></li>
+<li><a href="Page092.pdf">Bookend - 2</a></li>
+<li><a href="Page118.pdf">Next Hill - 1</a></li>
+<li><a href="Page146.pdf">Next Hill - 2</a></li>
+<li><a href="Page160.pdf">Letters - 1</a></li>
+<li><a href="Page181.pdf">The View - 1</a></li>
+<li><a href="Page222.pdf">Builders - 1</a></li>
+<li><a href="Page244.pdf">McGinty - 1</a></li>
+<li><a href="Page269.pdf">Prince Avenue - 1</a></li>
+<li><a href="Page306.pdf">Prince Avenue - 2</a></li>
+<li><a href="Page311.pdf">Prince Avenue - 3</a></li>
+<li><a href="Page320.pdf">Prince Avenue - 4</a></li>
 </ul>
 </div>
 
 <div id="right">
 <ul>
-<li><a href="Page356.pdf">John E. Talmadge House</a></li>
-<li><a href="Page398.pdf">Moving the Finley Street House</a></li>
-<li><a href="Page420.pdf">A Time of Extremes</a></li>
-<li><a href="Page429.pdf">Thomass R. R. Cobb House</a></li>
-<li><a href="Page453.pdf">Twenty-five Cobb Family Houses in Athens</a></li>
-<li><a href="Page467.pdf">Olivia Newton Cobb House</a></li>
-<li><a href="Page496.pdf">Howell Cobb House</a></li>
-<li><a href="Page502.pdf">Elijah Clarke Monument</a></li>
-<li><a href="Page508.pdf">Grove Seminary/St. Joseph's Catholic Church</a></li>
-<li><a href="Page544.pdf">Steam Tannery</a></li>
+<li><a href="Page356.pdf">Prince Avenue - 5</a></li>
+<li><a href="Page398.pdf">The Hill - 1</a></li>
+<li><a href="Page420.pdf">The Hill - 2</a></li>
+<li><a href="Page429.pdf">Pink Lady - 1</a></li>
+<li><a href="Page453.pdf">Cobb Houses - 1</a></li>
+<li><a href="Page467.pdf">Cobb Houses - 2</a></li>
+<li><a href="Page496.pdf">Cobb Houses - 3</a></li>
+<li><a href="Page502.pdf">Compendium - 1</a></li>
+<li><a href="Page508.pdf">Compendium - 2</a></li>
+<li><a href="Page544.pdf">Tanneries - 1</a></li>
 <br>
 <br>
 <li style="list-style-type: none;"><a href="https://www.facebook.com/TangiblePastAthens"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></li>
