Add retailers page

--- a/content/index.html
+++ b/content/index.html
@@ -45,6 +45,8 @@
 <br>
 <li style="list-style-type: none;"><a href="https://www.facebook.com/TangiblePastAthens"><i class="fa fa-facebook-square"></i> Like us on Facebook</a></li>
 <br>
+<li style="list-style-type: none;"><a href="retailers.html"><i class="fa fa-search"></i> Find a Local Retailer</a></li>
+<br>
 <li style="list-style-type: none;"><a href="TangiblePastOrderForm.pdf"><i class="fa fa-book"></i> Order Your Copy</a></li>
 </ul>
 </div>
