Replace Harry's with ACCL store
Harry's has closed and the ACCL store has a few copies

--- a/content/retailers.html
+++ b/content/retailers.html
@@ -33,11 +33,9 @@
 
 <li>Cullen & Co. <a href="https://www.facebook.com/pages/Cullen-Company-Interior-Design/267707986583559"><i class="fa fa-facebook-square"></i></a><small><br>297 Prince Avenue, The Bottleworks<br>706-621-1230</small></li>
 
-
-<li><a href="http://www.harrysbbq.com">Harry's BBQ</a> <a href="https://www.facebook.com/pages/Harrys-BBQ/82796711810"><i class="fa fa-facebook-square"></i></a><small><br>2425 Jefferson Road<br>706-353-7895</small></li>
-
 <li><a href="http://heerystoo.com">Heery's, Too</a> <a href="https://www.facebook.com/pages/Heerys-Too/323260949799"><i class="fa fa-facebook-square"></i></a><small><br>184 E. Clayton Street<br>706-552-3886</small></li>
 
+<li><a href="http://athenslibrary.org/athens/support/the-library-store">The Library Store, ACCL</a> <a href="https://www.facebook.com/pages/The-Library-Store/56624842298"><i class="fa fa-facebook-square"></i></a><small><br>2025 Baxter Street<br>706-613-3650 x318</small></li>
 
 <li><a href="http://www.olivebasketonline.com">The Olive Basket</a> <a href="https://www.facebook.com/olivebasket"><i class="fa fa-facebook-square"></i></a><small><br>297 Prince Avenue, The Bottleworks<br>706-714-6457</small></li>
 
