add The Bookshelf to retailers

--- a/content/retailers.html
+++ b/content/retailers.html
@@ -25,17 +25,19 @@
 
 <li><a href="http://www.trrcobbhouse.org">T. R. R. Cobb House Museum</a> <a href="https://www.facebook.com/pages/TRR-Cobb-House-Museum/264139670271410"><i class="fa fa-facebook-square"></i></a><small><br>175 Hill Street<br>706-369-3513</small></li>
 
+<li><a href="http://athenslibrary.org/athens/support/the-library-store">The Library Store, ACCL</a> <a href="https://www.facebook.com/pages/The-Library-Store/56624842298"><i class="fa fa-facebook-square"></i></a><small><br>2025 Baxter Street<br>706-613-3650 x318</small></li>
+
 </ul>
 </div>
 
 <div id="right-retailer">
 <ul class="retailer-list">
 
+<li><a href="http://www.bookshelfthomasville.com">The Bookshelf</a> <a href="https://www.facebook.com/BookshelfThomasville"><i class="fa fa-facebook-square"></i></a><small><br>126 South Broad St., Thomasville, GA<br>229-228-7767</small></li>
+
 <li>Cullen & Co. <a href="https://www.facebook.com/pages/Cullen-Company-Interior-Design/267707986583559"><i class="fa fa-facebook-square"></i></a><small><br>297 Prince Avenue, The Bottleworks<br>706-621-1230</small></li>
 
 <li><a href="http://heerystoo.com">Heery's, Too</a> <a href="https://www.facebook.com/pages/Heerys-Too/323260949799"><i class="fa fa-facebook-square"></i></a><small><br>184 E. Clayton Street<br>706-552-3886</small></li>
-
-<li><a href="http://athenslibrary.org/athens/support/the-library-store">The Library Store, ACCL</a> <a href="https://www.facebook.com/pages/The-Library-Store/56624842298"><i class="fa fa-facebook-square"></i></a><small><br>2025 Baxter Street<br>706-613-3650 x318</small></li>
 
 <li><a href="http://www.olivebasketonline.com">The Olive Basket</a> <a href="https://www.facebook.com/olivebasket"><i class="fa fa-facebook-square"></i></a><small><br>297 Prince Avenue, The Bottleworks<br>706-714-6457</small></li>
 
