add Oglethorpe Fresh

--- a/content/retailers.html
+++ b/content/retailers.html
@@ -43,6 +43,8 @@
 
 <li><a href="http://www.bkstr.com/georgiastore/home">UGA Bookstore</a> <a href="https://www.facebook.com/ugabookstore"><i class="fa fa-facebook-square"></i></a><small><br>40 Baxter Street, Tate Plaza<br>706-542-3171</small></li>
 
+<li>Oglethorpe Fresh <a href="https://www.facebook.com/pages/Oglethorpe-Fresh/118849704824147"><i class="fa fa-facebook-square"></i></a><small><br>111 S. Platt Street, Lexington, GA<br>706-743-5965</small></li>
+
 <br>
 <li style="list-style-type: none;"><a href="TangiblePastOrderForm.pdf"><i class="fa fa-book"></i> Order from Marshall Books</a></li>
 
